unpackaged/main/default/objects/litify_docs__Rule__c/litify_docs__Rule__c.object-meta.xml
<CustomObject>
    <description>Rule to be applied to an Input or Input Group</description>
    <label>Merge Rule</label>
    <nameField>
        <displayFormat>RULE-{000000}</displayFormat>
        <label>Merge Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merge Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>