unpackaged/main/default/objects/litify_docs__Rule__c/fields/litify_docs__Filter__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Filter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A flag to indicate this rule is to be used in the WHERE clause to filter out records displayed in template inputs of type Salesforce Record(s).</description>
    <inlineHelpText>A flag to indicate this rule is to be used in the WHERE clause to filter out records displayed in template inputs of type Salesforce Record(s).</inlineHelpText>
    <label>Filter</label>
    <type>Checkbox</type>
</CustomField>