unpackaged/main/default/objects/litify_docs__Rule__c/fields/litify_docs__Operator__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Operator__c</fullName>
    <description>The operator to use in the logic gate</description>
    <inlineHelpText>The operator to use in the logic gate</inlineHelpText>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>litify_docs__X_Operand_Data_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>is less than or equal to</fullName>
            </value>
            <value>
                <fullName>is greater than</fullName>
            </value>
            <value>
                <fullName>is less than</fullName>
            </value>
            <value>
                <fullName>is greater than or equal to</fullName>
            </value>
            <value>
                <fullName>equals</fullName>
            </value>
            <value>
                <fullName>does not equal</fullName>
            </value>
            <value>
                <fullName>is newer than</fullName>
            </value>
            <value>
                <fullName>is older than</fullName>
            </value>
            <value>
                <fullName>is newer than or equal to</fullName>
            </value>
            <value>
                <fullName>is older than or equal to</fullName>
            </value>
            <value>
                <fullName>contains</fullName>
            </value>
            <value>
                <fullName>does not contain</fullName>
            </value>
            <value>
                <fullName>starts with</fullName>
            </value>
            <value>
                <fullName>does not start with</fullName>
            </value>
            <value>
                <fullName>ends with</fullName>
            </value>
            <value>
                <fullName>does not end with</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>