unpackaged/main/default/objects/litify_docs__Rule__c/fields/litify_docs__Order__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Order__c</fullName>
    <description>The order of the rule within the rule group.</description>
    <label>Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>