unpackaged/main/default/objects/litify_docs__Rule__c/fields/litify_docs__Rule_Group__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Rule_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Rule Group that this Rule belongs to.</description>
    <inlineHelpText>The Rule Group that this Rule belongs to.</inlineHelpText>
    <label>Rule Group</label>
    <referenceTo>litify_docs__Rule_Group__c</referenceTo>
    <relationshipLabel>Rules</relationshipLabel>
    <relationshipName>Rules</relationshipName>
    <type>Lookup</type>
</CustomField>