unpackaged/main/default/objects/litify_docs__Rule__c/fields/litify_docs__X_Field__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__X_Field__c</fullName>
    <description>Field API name to resolve the value of to use as the X value for use in a logic gate</description>
    <inlineHelpText>Field API name to resolve the value of to use as the X value for use in a logic gate</inlineHelpText>
    <label>X Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>