unpackaged/main/default/objects/litify_docs__Rule__c/fields/litify_docs__X_Input__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__X_Input__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Input to resolve the X value from for use in a logic gate</description>
    <inlineHelpText>Input to resolve the X value from for use in a logic gate</inlineHelpText>
    <label>X Input</label>
    <referenceTo>litify_docs__Input__c</referenceTo>
    <relationshipLabel>X Input</relationshipLabel>
    <relationshipName>X_Input</relationshipName>
    <type>Lookup</type>
</CustomField>