unpackaged/main/default/objects/litify_docs__Rule__c/fields/litify_docs__X_Operand_Data_Type__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__X_Operand_Data_Type__c</fullName>
    <description>The data type for the X operand; drives available operators as well as Y operand data type.</description>
    <inlineHelpText>The data type for the X operand; drives available operators as well as Y operand data type.</inlineHelpText>
    <label>X Operand Data Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>litify_docs__Input_Data_Types</valueSetName>
    </valueSet>
</CustomField>