unpackaged/main/default/objects/litify_docs__Rule__c/fields/litify_docs__Y_Date_Literal__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Y_Date_Literal__c</fullName>
    <description>A string representing a date/datetime or range of dates/datetimes relative to the current date.</description>
    <inlineHelpText>A string representing a date/datetime or range of dates/datetimes relative to the current date.</inlineHelpText>
    <label>Y Date Literal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>