unpackaged/main/default/objects/litify_docs__Rule__c/fields/litify_docs__Y_Static__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Y_Static__c</fullName>
    <description>Static value to use as the Y value for use in a logic gate</description>
    <inlineHelpText>Static value to use as the Y value for use in a logic gate</inlineHelpText>
    <label>Y Static</label>
    <length>255</length>
    <type>Text</type>
</CustomField>